<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Math Problems</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="displayText">Please Answer Questions:</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="resetButton">Reset Answers</string>
    <string name="submitButton">Submit Answers</string>

</resources>
